--- a/portfolio.html
+++ b/portfolio.html
@@ -9,147 +9,224 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav class="site-nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-text">Web</span>Studio</a
-        >
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link-current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="auth-nav">
-        <li>
-          <a href="emailto:info@devstudio.com" class="link"
-            >info@devstudio.com
-          </a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link"> +38 096 111 11 11</a>
-        </li>
-      </ul>
+    <header class="">
+      <div class="container">
+        <div class="main-nav">
+          <nav class="conteiner-nav">
+            <a href="./index.html" class="logo"
+              ><span class="logo-text">Web</span>Studio</a
+            >
+            <ul class="site-nav">
+              <li class="item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="item"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="conteiner-contakt">
+            <ul class="auth-nav">
+              <li class="item">
+                <a href="emailto:info@devstudio.com" class="link"
+                  >info@devstudio.com
+                </a>
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="link"> +38 096 111 11 11</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-      <section class="work">
-        <h1>Карточки работ</h1>
+      <section class="section container">
+        <h1 class="visually-hidden">Карточки работ</h1>
         <ul class="filter">
-          <li><button type="button" class="button-filter">Все</button></li>
-          <li>
+          <li class="item">
+            <button type="button" class="button-filter">Все</button>
+          </li>
+
+          <li class="item">
             <button type="button" class="button-filter">Веб-сайты</button>
           </li>
-          <li>
+
+          <li class="item">
             <button type="button" class="button-filter">Приложения</button>
           </li>
-          <li><button type="button" class="button-filter">Дизайн</button></li>
-          <li>
+
+          <li class="item">
+            <button type="button" class="button-filter">Дизайн</button>
+          </li>
+
+          <li class="item">
             <button type="button" class="button-filter">Маркетинг</button>
           </li>
         </ul>
-        <ul class="card-work">
-          <li>
-            <a href="">
-              <img
-                src="./images/techno.jpeg"
-                alt="стрaница сайта"
-                width="370"
-              />
-              <h2 class="work-title">Технокряк</h2>
-              <p class="work-name">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/poster.jpeg" alt="баскетбол" width="370" />
-              <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-              <p class="work-name">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/restaurant.jpeg"
-                alt="логотип ресторана"
-                width="370"
-              />
-              <h2 class="work-title">Ресторан Seafood</h2>
-              <p class="work-name">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/prime.jpeg" alt="наушники" width="370" />
-              <h2 class="work-title">Проект Prime</h2>
-              <p class="work-name">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/boxes.jpeg" alt="блоки" width="370" />
-              <h2 class="work-title">Проект Boxes</h2>
-              <p class="work-name">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/Inspiration.jpeg" alt="монитор" width="370" />
-              <h2 class="work-title">Inspiration has no Borders</h2>
-              <p class="work-name">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/edition.jpeg" alt="книга" width="370" />
-              <h2 class="work-title">Издание Limited Edition</h2>
-              <p class="work-name">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/projeck.jpeg" alt="лейба" width="370" />
-              <h2 class="work-title">Проект LAB</h2>
-              <p class="work-name">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/business.jpeg" alt="ноутбук" width="370" />
-              <h2 class="work-title">Growing Business</h2>
-              <p class="work-name">Приложение</p>
-            </a>
-          </li>
-        </ul>
+
+        <div class="card-set">
+          <ul class="card-work">
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img
+                    src="./images/techno.jpeg"
+                    alt="стрaница сайта"
+                    width="370"
+                  />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Технокряк</h2>
+                  <p class="work-name">Веб-сайт</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/poster.jpeg" alt="баскетбол" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="work-name">Дизайн</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img
+                    src="./images/restaurant.jpeg"
+                    alt="логотип ресторана"
+                    width="370"
+                  />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Ресторан Seafood</h2>
+                  <p class="work-name">Приложение</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/prime.jpeg" alt="наушники" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Проект Prime</h2>
+                  <p class="work-name">Маркетинг</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/boxes.jpeg" alt="блоки" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Проект Boxes</h2>
+                  <p class="work-name">Приложение</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img
+                    src="./images/Inspiration.jpeg"
+                    alt="монитор"
+                    width="370"
+                  />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Inspiration has no Borders</h2>
+                  <p class="work-name">Веб-сайт</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/edition.jpeg" alt="книга" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Издание Limited Edition</h2>
+                  <p class="work-name">Дизайн</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/projeck.jpeg" alt="лейба" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Проект LAB</h2>
+                  <p class="work-name">Маркетинг</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="item">
+              <article class="card">
+                <div class="card-thumb">
+                  <img src="./images/business.jpeg" alt="ноутбук" width="370" />
+                </div>
+                <div class="card-content">
+                  <h2 class="work-title">Growing Business</h2>
+                  <p class="work-name">Приложение</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"
-        ><span class="logo-text">Web</span>Studio</a
-      >
-      <address>
-        <ul class="footer-nav">
-          <li>
-            <a
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-adress"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link"> +38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo-footer"
+          ><span class="logo-text">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-nav">
+            <li class="item">
+              <a
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                target="_blank"
+                rel="noopener"
+                class="link-adress"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a href="mailto:info@example.com" class="link"
+                >info@example.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="link"> +38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
