--- a/portfolio.html
+++ b/portfolio.html
@@ -50,31 +50,31 @@
       </div>
     </header>
     <main>
-      <section class="section container">
-        <h1 class="visually-hidden">Карточки работ</h1>
-        <ul class="filter">
-          <li class="item">
-            <button type="button" class="button-filter">Все</button>
-          </li>
+      <section>
+        <div class="section container">
+          <h1 class="visually-hidden">Карточки работ</h1>
+          <ul class="filter">
+            <li class="item">
+              <button type="button" class="button-filter">Все</button>
+            </li>
 
-          <li class="item">
-            <button type="button" class="button-filter">Веб-сайты</button>
-          </li>
+            <li class="item">
+              <button type="button" class="button-filter">Веб-сайты</button>
+            </li>
 
-          <li class="item">
-            <button type="button" class="button-filter">Приложения</button>
-          </li>
+            <li class="item">
+              <button type="button" class="button-filter">Приложения</button>
+            </li>
 
-          <li class="item">
-            <button type="button" class="button-filter">Дизайн</button>
-          </li>
+            <li class="item">
+              <button type="button" class="button-filter">Дизайн</button>
+            </li>
 
-          <li class="item">
-            <button type="button" class="button-filter">Маркетинг</button>
-          </li>
-        </ul>
+            <li class="item">
+              <button type="button" class="button-filter">Маркетинг</button>
+            </li>
+          </ul>
 
-        <div class="card-set">
           <ul class="card-work">
             <li class="item">
               <article class="card">
